# rust_ffi_tests

./: .gitignore  CMakeLists.txt  Cargo.toml  README
AppC/: CMakeLists.txt
AppC/src/: main.cpp
AppR/: CMakeLists.txt  Cargo.toml  build.rs
AppR/ffi/: ffi_wrapper.h
AppR/src/: main.rs
CoreC/: CMakeLists.txt
CoreC/include/: core_c.h
CoreC/src/: core_c.cpp
CoreR/: CMakeLists.txt  Cargo.toml  build.rs
CoreR/ffi/: core_r.h
CoreR/src/: lib.rs
WrapperC/: CMakeLists.txt
WrapperC/include/: wrapper_c.h
WrapperC/src/: wrapper_c.cpp
WrapperR/: CMakeLists.txt  Cargo.toml  build.rs
WrapperR/.cargo/: config.toml
WrapperR/ffi/: core_c_wrapper.h  wrapper_r.h
WrapperR/src/: lib.rs
