[package]
name = "wrapper_r"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["rlib", "staticlib"]

[dependencies]
core_r = { path = "../CoreR" }

[build-dependencies]
bindgen = "0.53.1"
cbindgen = "0.20.0"